Truncate the beginning of the project path names on issue boards

--- a/app/assets/stylesheets/pages/boards.scss
+++ b/app/assets/stylesheets/pages/boards.scss
@@ -536,6 +536,10 @@
   }
 }
 
-.board-issue-path.js-show-tooltip {
-  cursor: help;
+.board-issue-path {
+  direction: rtl;
+
+  &.js-show-tooltip {
+    cursor: help;
+  }
 }
